# userspace-resource-manager-extensions

./: CMakeLists.txt
Configs/: PerApp.yaml  ResourcesConfig.yaml  SignalsConfig.yaml
Configs/target-specific/: glymur-crd  sa7255p  sa8775p
Configs/target-specific/alorp/: InitConfig.yaml  ResourcesConfig.yaml  SignalsConfig.yaml
Configs/target-specific/cq2390m/: InitConfig.yaml  SignalsConfig.yaml
Configs/target-specific/glymur/: InitConfig.yaml  SignalsConfig.yaml
Configs/target-specific/qcm6490/: SignalsConfig.yaml
Configs/target-specific/qcs8300/: SignalsConfig.yaml
Configs/target-specific/qcs9100/: SignalsConfig.yaml
Configs/target-specific/seraph/: InitConfig.yaml  ResourcesConfig.yaml  SignalsConfig.yaml
Extensions/: CamPostProcessing.cpp
debian/: control  rules  userspace-resource-manager-extensions.install
docs/: 02-build-and-install.md  03-configuration-reference.md  06-extension-api-guide.md  10-adding-custom-resource.md  11-post-processing-blocks.md  README.md
initscripts/post_boot/: post_boot.sh  post_boot_alorp.sh  post_boot_common.sh  post_boot_glymur.sh  post_boot_qcs9100.sh
